changed readString to readAllBytes -> android api doesnt have Files.readString method